--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "db-gen",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./index.js",
+  "bin": {
+    "dbgen": "./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
