--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mysql/xdevapi": "file:../mysql-connector-js/package",
+    "@mysql/xdevapi": "^8.0.12",
     "exceljs": "^1.6.2",
     "mysql": "^2.16.0",
     "yargs": "^12.0.2"
